tests/macro-tests/cases/widget_new/missing_semi1.stderr
error: expected `;`
  --> cases/widget_new/missing_semi1.rs:14:9
   |
14 |         enabled = true;
   |         ^^^^^^^
